--- a/test/web/index.html
+++ b/test/web/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/roaring.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>roaring-wasm web app</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/mocha-tests.ts"></script>
+    <div id="progress">...running</div>
+    <div id="mocha"></div>
+    <script type="module" src="/main.ts"></script>
   </body>
 </html>
