--- a/test/web/index.html
+++ b/test/web/index.html
@@ -7,7 +7,7 @@
     <title>roaring-wasm web app</title>
   </head>
   <body>
-    <div id="progress">...running</div>
+    <div id="progress" class="running">...running</div>
     <div id="mocha"></div>
     <script type="module" src="/main.ts"></script>
   </body>
